--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "SIGame",
-  "version": "1.0.0",
-  "description": "SIGame - Open Source Selfhosted Web Quiz Game with Admin Panel and TV Screen",
+  "version": "2.0.0",
+  "description": "SIGame Engine - Multi-format Open Source Web Quiz Engine",
   "main": "dist/SIGame.html",
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack --mode development --watch",
     "serve": "webpack serve --mode development",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:e2e": "playwright test"
   },
   "keywords": [
     "quiz",
@@ -19,12 +22,21 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@playwright/test": "^1.58.1",
+    "@types/jest": "^30.0.0",
+    "@types/jszip": "^3.4.0",
     "@types/node": "^20.10.0",
     "css-loader": "^6.8.1",
+    "fast-xml-parser": "^5.3.4",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "jszip": "^3.10.1",
     "mini-css-extract-plugin": "^2.9.4",
     "style-loader": "^3.3.3",
+    "ts-jest": "^29.4.6",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
